--- a/plugin/global/settings/settings.user.toml
+++ b/plugin/global/settings/settings.user.toml
@@ -1,3 +1,7 @@
 ############### test ###############
 [test]
 ENABLE = false
+[read_only]
+   READ_ONLY_DEFAULT = true     # 打开Typora时会自动进入只读模式
+   HOTKEY = "ctrl+alt+shift+r"  # 快捷键修改为ctrl+alt+shift+r
+   #修改部分参数，不会影响其他插件的正常运行。
